[gd_scene load_steps=28 format=3 uid="uid://bly35rdgw21ns"]

[ext_resource type="Script" uid="uid://bi1i5eyrv6r8r" path="res://scenes/arena.gd" id="1_fu4bq"]
[ext_resource type="AudioStream" uid="uid://dwse76yhsgxvm" path="res://assets/music/alexander_ehlers_twists.ogg" id="2_u834y"]
[ext_resource type="MeshLibrary" uid="uid://b20aesk2htmx4" path="res://mesh_library/PlatformMeshLibrary.tres" id="3_pbtuc"]
[ext_resource type="Script" uid="uid://d35yqiqt3elib" path="res://custom_nodes/play_area.gd" id="4_yokb4"]
[ext_resource type="Script" uid="uid://0c1lktulq74k" path="res://custom_nodes/unit_grid.gd" id="5_35c7g"]
[ext_resource type="Script" uid="uid://bigmjfyhsjcoo" path="res://components/tile_highlighter.gd" id="6_n068f"]
[ext_resource type="ArrayMesh" uid="uid://b02iapdl2540e" path="res://assets/3D/Platform_highlight_platform.res" id="6_sbb53"]
[ext_resource type="AudioStream" uid="uid://xgrsj3clmat0" path="res://assets/sfx/unit_place.ogg" id="8_nb1nt"]
[ext_resource type="Script" uid="uid://b3hhnms6d0ve1" path="res://custom_nodes/unit_mover.gd" id="8_yokb4"]
[ext_resource type="Script" uid="uid://b0pxn2geifdvx" path="res://custom_nodes/unit_combiner.gd" id="9_g8a64"]
[ext_resource type="PackedScene" uid="uid://1ibhn2eg5e7o" path="res://scenes/shop/shop.tscn" id="10_n068f"]
[ext_resource type="AudioStream" uid="uid://dubwbrp3e8hg3" path="res://assets/sfx/combine.ogg" id="10_uvldv"]
[ext_resource type="Script" uid="uid://cvimuwy4vbr6i" path="res://components/scene_spawner.gd" id="11_7wjmx"]
[ext_resource type="Script" uid="uid://cjvntpuktlt1c" path="res://custom_nodes/unit_spawner.gd" id="11_g8a64"]
[ext_resource type="Resource" uid="uid://bkgfh74x4xiin" path="res://data/game_state/game_state.tres" id="11_lw7ys"]
[ext_resource type="PackedScene" uid="uid://3iddfpwj615e" path="res://scenes/unit/unit.tscn" id="12_lw7ys"]
[ext_resource type="PackedScene" uid="uid://b73rmylpr124l" path="res://scenes/sell_portal/sell_portal.tscn" id="13_u834y"]
[ext_resource type="Material" uid="uid://cwyg13d8wrnk7" path="res://materials/ground.tres" id="16_ffcej"]
[ext_resource type="Script" uid="uid://ds2v2mg6lixbx" path="res://custom_nodes/battle_handler.gd" id="16_qclql"]
[ext_resource type="PackedScene" uid="uid://cgoj0s6dvhwiq" path="res://scenes/unit/battle_unit.tscn" id="17_sya1t"]
[ext_resource type="PackedScene" uid="uid://ban1mi1ikk68q" path="res://scenes/start_battle_button/start_battle_button.tscn" id="18_htucp"]
[ext_resource type="Resource" uid="uid://1v4dxsmqc6xl" path="res://data/player/player_stats.tres" id="19_4cf4i"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_h0wof"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_fu4bq"]
sky_material = SubResource("ProceduralSkyMaterial_h0wof")

[sub_resource type="Environment" id="Environment_sbb53"]
background_mode = 2
sky = SubResource("Sky_fu4bq")
ambient_light_source = 2
ambient_light_color = Color(0.580392, 0.596078, 0.682353, 1)
tonemap_mode = 3
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_ffcej"]
material = ExtResource("16_ffcej")
size = Vector2(20, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_3vubs"]

[node name="Arena" type="Node3D"]
script = ExtResource("1_fu4bq")
arena_music_stream = ExtResource("2_u834y")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0.625)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sbb53")

[node name="Camera3D" type="Camera3D" parent="." groups=["camera"]]
transform = Transform3D(1, 0, 0, 0, 0.474088, 0.880477, 0, -0.880477, 0.474088, 5.36136, 10.8327, 9.90033)
projection = 1
fov = 20.0
size = 9.445

[node name="PlayArea" type="GridMap" parent="." node_paths=PackedStringArray("unit_grid", "tile_highlighter", "selector")]
mesh_library = ExtResource("3_pbtuc")
cell_size = Vector3(1, 0.001, 1)
data = {
"cells": PackedInt32Array(0, 0, 2, 0, 1, 2, 1, 1, 2, 2, 1, 2, 3, 1, 2, 4, 1, 2, 4, 0, 2, 3, 0, 2, 2, 0, 2, 1, 0, 2, 4, 2, 2, 3, 2, 2, 2, 2, 2, 1, 2, 2, 0, 2, 2, 4, 5, 2, 4, 4, 2, 4, 3, 2, 3, 3, 2, 2, 3, 2, 1, 3, 2, 0, 3, 2, 0, 4, 2, 1, 4, 2, 2, 4, 2, 3, 4, 2, 3, 5, 2, 2, 5, 2, 1, 5, 2, 0, 5, 2, 5, 5, 2, 6, 5, 2, 7, 5, 2, 7, 4, 2, 5, 4, 2, 6, 4, 2, 6, 3, 2, 6, 2, 2, 6, 1, 2, 6, 0, 2, 5, 0, 2, 5, 1, 2, 5, 2, 2, 5, 3, 2, 7, 3, 2, 7, 2, 2, 7, 0, 2, 7, 1, 2, 0, 6, 2, 1, 6, 2, 2, 6, 2, 3, 6, 2, 4, 6, 2, 5, 6, 2, 6, 6, 2, 7, 6, 2, 8, 6, 2, 9, 6, 2, 9, 0, 2, 8, 0, 2, 8, 1, 2, 8, 2, 2, 8, 3, 2, 8, 4, 2, 8, 5, 2, 9, 5, 2, 9, 4, 2, 9, 3, 2, 9, 2, 2, 9, 1, 2)
}
script = ExtResource("4_yokb4")
unit_grid = NodePath("ArenaUnitGrid")
tile_highlighter = NodePath("TileHighlighter")
selector = NodePath("../Selector")
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="ArenaUnitGrid" type="Node3D" parent="PlayArea"]
script = ExtResource("5_35c7g")
size = Vector2i(4, 7)

[node name="BattleUnitGrid" type="Node3D" parent="PlayArea"]
script = ExtResource("5_35c7g")
size = Vector2i(10, 7)

[node name="TileHighlighter" type="Node3D" parent="PlayArea" node_paths=PackedStringArray("play_area", "highlight_mesh")]
script = ExtResource("6_n068f")
enabled = false
play_area = NodePath("..")
highlight_mesh = NodePath("../PlatformHighlightPlatform2")

[node name="PlatformHighlightPlatform2" type="MeshInstance3D" parent="PlayArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.6277, 0.79747, 2.91276)
mesh = ExtResource("6_sbb53")

[node name="Bench" type="GridMap" parent="." node_paths=PackedStringArray("unit_grid", "tile_highlighter", "selector")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)
mesh_library = ExtResource("3_pbtuc")
cell_size = Vector3(1, 0.001, 1)
data = {
"cells": PackedInt32Array(0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0)
}
script = ExtResource("4_yokb4")
unit_grid = NodePath("BenchUnitGrid")
tile_highlighter = NodePath("TileHighlighter")
selector = NodePath("../Selector")

[node name="BenchUnitGrid" type="Node3D" parent="Bench"]
script = ExtResource("5_35c7g")
size = Vector2i(10, 1)

[node name="TileHighlighter" type="Node3D" parent="Bench" node_paths=PackedStringArray("play_area", "highlight_mesh")]
script = ExtResource("6_n068f")
enabled = false
play_area = NodePath("..")
highlight_mesh = NodePath("../PlatformHighlightPlatform")

[node name="PlatformHighlightPlatform" type="MeshInstance3D" parent="Bench"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.2538, 0.79747, -5.08724)
mesh = ExtResource("6_sbb53")
skeleton = NodePath("../../PlayArea")

[node name="UnitMover" type="Node" parent="." node_paths=PackedStringArray("play_areas")]
script = ExtResource("8_yokb4")
play_areas = [NodePath("../PlayArea"), NodePath("../Bench")]
unit_place_sound = ExtResource("8_nb1nt")
game_state = ExtResource("11_lw7ys")

[node name="UnitSpawner" type="Node" parent="." node_paths=PackedStringArray("bench", "game_area")]
script = ExtResource("11_g8a64")
bench = NodePath("../Bench")
game_area = NodePath("../PlayArea")
game_state = ExtResource("11_lw7ys")

[node name="SceneSpawner" type="Node" parent="UnitSpawner"]
script = ExtResource("11_7wjmx")
scene = ExtResource("12_lw7ys")
metadata/_custom_type_script = "uid://cvimuwy4vbr6i"

[node name="UnitCombiner" type="Node" parent="." node_paths=PackedStringArray("buffer_timer")]
script = ExtResource("9_g8a64")
buffer_timer = NodePath("BufferTimer")
combine_sound = ExtResource("10_uvldv")

[node name="BufferTimer" type="Timer" parent="UnitCombiner"]
one_shot = true

[node name="BattleHandler" type="Node" parent="." node_paths=PackedStringArray("game_area", "game_area_unit_grid", "battle_unit_grid")]
script = ExtResource("16_qclql")
game_state = ExtResource("11_lw7ys")
game_area = NodePath("../PlayArea")
game_area_unit_grid = NodePath("../PlayArea/ArenaUnitGrid")
battle_unit_grid = NodePath("../PlayArea/BattleUnitGrid")
metadata/_custom_type_script = "uid://ds2v2mg6lixbx"

[node name="SceneSpawner" type="Node" parent="BattleHandler"]
script = ExtResource("11_7wjmx")
scene = ExtResource("17_sya1t")
metadata/_custom_type_script = "uid://cvimuwy4vbr6i"

[node name="SellPortal" parent="." instance=ExtResource("13_u834y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.154, 0.576695, 7.989)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Shop" parent="UI" instance=ExtResource("10_n068f")]
unique_name_in_owner = true

[node name="StarBattleButton" parent="UI" node_paths=PackedStringArray("arena_grid") instance=ExtResource("18_htucp")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_top = 36.0
offset_right = 27.0
offset_bottom = 86.0
grow_horizontal = 2
game_state = ExtResource("11_lw7ys")
player_stats = ExtResource("19_4cf4i")
arena_grid = NodePath("../../PlayArea/ArenaUnitGrid")

[node name="Selector" type="Node3D" parent="."]

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.472, 0, 3.562)
mesh = SubResource("PlaneMesh_ffcej")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/StaticBody3D"]
shape = SubResource("BoxShape3D_3vubs")
